centered items successfully - LOL

--- a/index.html
+++ b/index.html
@@ -38,23 +38,19 @@
                         </div>
                       
                 </div>   
-            </nav>
-
-           
+            </nav>     
     </div>
 
-    <div class="top js-top vh-100 text-white d-flex">
-        <div class="container flex-fill">
-            <div class="row h-100 align-items-center py-1">
-                <div class="col-lg-12 h-100 flex-fill d-flex flex-column align-items-center">
-                    <div class="my-auto text-center">
-                        <h1 class="top-title">
-                            <p>Uncle Simz 2020 - A new World Awaits...</p>
-                        </h1>
-                </div>
-            </div>
+    <div class="container h-100 d-flex">
+        <div class="row justify-content-center align-items-center mx-auto">
+            <!-- Helped in centering text: https://stackoverflow.com/questions/42252443/vertical-align-center-in-bootstrap-4 -->
+            <h1 class="font-weight-bold" >
+                <!-- Remember inline elements cant be added margins etc as blocks!-->
+                Simbarashe Masamba 2020 
+            </h1>
         </div>
     </div>
+
   
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
