Added an About page

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
                         </button>
                         <div class="collapse navbar-collapse" id="mainNav">
                             <div class=" ml-auto navbar-nav">
-                                <a href="" class="nav-item nav-link active">About</a>
+                                <a href="about.html" class="nav-item nav-link active">About</a>
                                 <a href="" class="nav-item nav-link">My CV</a>
-                                <a href="" class="nav-item nav-link">Portfolio</a>
-                                <a href="" class="nav-item nav-link">Contact Me</a>
-                                <a class="nav-link nav-item" href="#"><i class="fab fa-facebook-f fa-lg"></i></a>
-                                <a class="nav-link nav-item" href="#"><i class="fab fa-twitter fa-lg"></i></a>
-                                <a class="nav-link nav-item" href="#"><i class="fab fa-instagram fa-lg"></i></a>
-                                <a class="nav-link nav-item" href="#"><i class="fab fa-linkedin fa-lg"></i>
+                                <a href="portfolio.html" class="nav-item nav-link">Portfolio</a>
+                                <a href="contact.html" class="nav-item nav-link">Contact Me</a>
+                                <a class="nav-link nav-item" href="https://www.facebook.com"><i class="fab fa-facebook-f fa-lg"></i></a>
+                                <a class="nav-link nav-item" href="http://www.twitter.com/"><i class="fab fa-twitter fa-lg"></i></a>
+                                <a class="nav-link nav-item" href="https://www.instagram.com/"><i class="fab fa-instagram fa-lg"></i></a>
+                                <a class="nav-link nav-item" href="https://www.linkedin.com/feed/"><i class="fab fa-linkedin fa-lg"></i>
                                 </a>
                             </div>
                         </div>
